--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="light_blue">#bbe1fa</color>
     <color name="very_dark_blue">#1b262c</color>
 
+    <!--    Custom icon color -->
+    <color name="green">#00E676</color>
+
 </resources>
