--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         android:layout_marginTop="44dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        tools:src="@drawable/perm_media" />
+        app:srcCompat="@drawable/perm_media" />
 
     <ImageView
         android:id="@+id/imageView7"
